# mnj

./: .gitignore  .gitlab-ci.yml  .landscape.yml  .pre-commit-config.yaml  .travis.yml  COPYING  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  todo.txt  tox.ini
docs/: Makefile  conf.py  contribute.rst  copying.rst  examples.rst  index.rst  mnj.compat.rst  mnj.document.rst  mnj.operators.query.rst  mnj.operators.rst  mnj.rst  modules.rst  mypol.pp  mypol.te  todo.rst
mnj/: __init__.py  __main__.py  base.py  doc_registry.py  document.py  exceptions.py  operators.py  query.py  types.py
mnj/compat/: __init__.py  chainmap.py  ordereddict35.py  regex.py
mnj/core/: __init__.py  base.py  client.py  document.py  exceptions.py  query.py  registry.py  types.py
mnj/document/: __init__.py  base.py  document.py  exceptions.py  query.py  registry.py  types.py
mnj/operators/: __init__.py  base.py  comparison.py  element.py  exceptions.py  logical.py
nj/: __init__.py
nj/compat/: regex.py
nj/core/: __init__.py  base.py  document.py  query.py  registry.py  types.py
nj/operators/: __init__.py  base.py  exceptions.py
tests/: Dockerfile  conftest.py  docker-compose.yml  run.sh  test_base.py  test_doc_registry.py  test_document.py  test_query.py
tests/core/: test_base.py  test_client.py  test_document.py  test_q.py  test_query.py
tests/document/: test_document.py  test_registry.py
tests/operators/: test_comparison.py  test_element.py  test_logical.py
tests/query/: test_array.py  test_bitwise.py  test_comparison.py  test_element.py  test_evaluation.py  (+1 more)
(+35 files in other folders)
